# adventofcode2020

./: .gitignore  CMakeLists.txt  README.md
day01/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt  main.cpp
day18/: CMakeLists.txt  main.cpp
day19/: CMakeLists.txt  main.cpp
day20/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt  main.cpp
day22/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt  main.cpp
day24/: CMakeLists.txt  main.cpp
day25/: CMakeLists.txt  main.cpp
utils/: utils.h
